[project]
name = "homeassistant-matismart-component"
description = "Home Assistant component for Matismart AIoT electrical devices."
readme = "README.md"

authors = [
  { name = "Samuel Cabrero", email = "samuel@orica.es" },
]
license = { file="LICENSE" }
keywords = ["Matismart", "Matis", "homeassistant", "home-assistant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dynamic = ["version"]

requires-python = ">= 3.13.7"

dependencies = [
  "homeassistant>=2025.10.0"
]

[dependency-groups]
typing = ["mypy"]
linting = ["pylint"]
dev = [{include-group = "typing"}, {include-group = "linting"}, "pre-commit"]

[project.urls]
Homepage = "https://github.com/scabrero/homeassistant-matismart-component"
Repository = "https://github.com/scabrero/homeassistant-matismart-component.git"
Issues = "https://github.com/scabrero/homeassistant-matismart-component/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/doc",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/matismart"]

[tool.mypy]
python_version = "3.13"
pretty = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "unexpected-keyword-arg",
  "duplicate-code",
]
